--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -20,6 +21,7 @@
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "pg": "^7.8.0",
+    "react-router-dom": "^4.3.1",
     "sqlite3": "^4.0.6"
   }
 }
